# arduino_glove

./: .gitignore  CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/ArduinoToMIDI/: CMakeLists.txt
Plugins/ArduinoToMIDI/Source/: MidiProcessor.h  PluginProcessor.cpp  PortManager.h
Plugins/MinimalPluginTemplate/: CMakeLists.txt
SDKs/: CMakeLists.txt
SDKs/juce_serialport/: juce_serialport.cpp  juce_serialport.h  juce_serialport_OSX.cpp
